--- a/Master.Master
+++ b/Master.Master
@@ -22,23 +22,56 @@
     <form id="form1" runat="server">
         <div class="container-3">
             <%--navbar links--%>
-          <nav class="navbar navbar-expand-lg fixed-top bg-light"> <%--navbar color--%>
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.aspx"><i class="fa-solid fa-book"></i> E-Kütüphane</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                      <div class="fa-1x">
-                          <li class="nav-item">
-                              <a class="nav-link active" aria-current="page"  href="index.aspx"><i class="fas fa-home"></i> Ana Sayfa</a>
-                           </li>
-                      </div>
-                </ul>
-            </div>
-        </div>
-          </nav>
+          <nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+
+    <a class="navbar-brand" href="index.aspx"><i class="fa-solid fa-book"></i> E-Kütüphane</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.aspx">Ana Sayfa</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.aspx">Hakkımızda</a>
+        </li>
+
+         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.aspx">İletişim</a>
+        </li>
+        
+      </ul>
+
+         <ul class="navbar-nav">
+        <li class="nav-item">
+            <asp:LinkButton ID="LinkButton1" class="nav-link active" runat="server">Kitapları Bul</asp:LinkButton>
+        </li>
+
+        <li class="nav-item">
+            <asp:LinkButton ID="LinkButton2" class="nav-link active" runat="server">Kullanıcı Girişi</asp:LinkButton>
+        </li>
+
+        <li class="nav-item">
+            <asp:LinkButton ID="LinkButton3" class="nav-link active" runat="server">Kayıt OL</asp:LinkButton>
+        </li>
+
+        <li class="nav-item">
+            <asp:LinkButton ID="LinkButton4" class="nav-link active" runat="server">Çıkış Yap</asp:LinkButton>
+        </li>
+         </ul>
+        
+    
+
+    </div>
+  </div>
+</nav>
         </div>
         <%--ContentPlaceHolder1--%>
         <div>
